<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.view.fragment.CardDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guidelineCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/noImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:text="@string/noImage"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:layout_constraintBottom_toTopOf="@id/guidelineCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/nameDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <TextView
            android:id="@+id/cardSetDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameDetails" />

        <TextView
            android:id="@+id/typeDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardSetDetails" />

        <TextView
            android:id="@+id/textDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeDetails" />

        <TextView
            android:id="@+id/faction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:text="@string/faction"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDetails" />

        <TextView
            android:id="@+id/factionDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/faction"
            app:layout_constraintTop_toBottomOf="@id/textDetails" />

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:text="@string/cost"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/factionDetails" />

        <TextView
            android:id="@+id/costDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cost"
            app:layout_constraintTop_toBottomOf="@id/factionDetails" />

        <TextView
            android:id="@+id/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:text="@string/attack"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/costDetails" />

        <TextView
            android:id="@+id/attackDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/attack"
            app:layout_constraintTop_toBottomOf="@id/costDetails" />

        <TextView
            android:id="@+id/durability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:text="@string/durability"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attackDetails" />

        <TextView
            android:id="@+id/durabilityDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elementHorizontalMargins"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/durability"
            app:layout_constraintTop_toBottomOf="@id/attackDetails" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
